ROO-93: Need to fix alignment issues in JSP forms

--- a/addon-web-mvc-jsp/src/main/resources/org/springframework/roo/addon/mvc/jsp/styles/roo.css
+++ b/addon-web-mvc-jsp/src/main/resources/org/springframework/roo/addon/mvc/jsp/styles/roo.css
@@ -287,6 +287,7 @@ fieldset th {
 	font-size:11px;
 	text-transform:uppercase;
 	font-weight:bold;
+	height:24px;
 }
 
 .updated {
